--- a/IntellUser/appsettings.json
+++ b/IntellUser/appsettings.json
@@ -15,7 +15,7 @@
   "ConnectionStrings": {
 
     //"SqlServerConnection": "Server=172.16.3.200;Database=TedaVolunteerDB;uid=etOwner;pwd=App1234;"
-    "SqlServerConnection": "Server=D41ICKRFDL1HRNM;Database=TedaVolunteerDB;Trusted_Connection=True;"
+    "SqlServerConnection": "Server=MSI\\SQLEXPRESS2014;Database=TedaVolunteerDB;Trusted_Connection=True;"
   },
 
   "Logging": {
