修改表结构

--- a/IntellVolunteer/appsettings.json
+++ b/IntellVolunteer/appsettings.json
@@ -18,8 +18,8 @@
   },
 
   "ConnectionStrings": {
-    //"SqlServerConnection": "Server=D41ICKRFDL1HRNM;Database=TedaVolunteerDB;Trusted_Connection=True;",
-    "SqlServerConnection": "Server=MSI\\SQLEXPRESS2014;Database=TedaVolunteerDB;Trusted_Connection=True;",
+    "SqlServerConnection": "Server=D41ICKRFDL1HRNM;Database=TedaVolunteerDB;Trusted_Connection=True;",
+    //"SqlServerConnection": "Server=MSI\\SQLEXPRESS2014;Database=TedaVolunteerDB;Trusted_Connection=True;",
     "WGWConnection": "Server=D41ICKRFDL1HRNM;Database=MicrocosmicWeb;uid=sa;pwd=App1234;"
   },
 
