--- a/IntellWeChat/appsettings.json
+++ b/IntellWeChat/appsettings.json
@@ -16,7 +16,9 @@
   "ConnectionStrings": {
 
     "SqlServerConnection": "Server=D41ICKRFDL1HRNM;Database=TedaVolunteerDB;Trusted_Connection=True;",
-    "WGWConnection": "Server=D41ICKRFDL1HRNM;Database=MicrocosmicWeb;uid=sa;pwd=App1234;"
+    "WGWConnection": "Server=D41ICKRFDL1HRNM;Database=MicrocosmicWeb;uid=sa;pwd=App1234;",
+    "EasyConnection": "Server=D41ICKRFDL1HRNM;Database=TedaEasyDB;uid=sa;pwd=App1234;"
+
     //"SqlServerConnection": "Server=192.168.53.44;Database=TedaVolunteerDB;uid=sa;pwd=App1234;",
     //"WGWConnection": "Server=192.168.53.44;Database=MicrocosmicWeb;uid=sa;pwd=App1234;"
   },
