--- a/Service/Dto.Service.csproj
+++ b/Service/Dto.Service.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\Dto.IRepository\Dto.IRepository.csproj" />
     <ProjectReference Include="..\Dto.IService\Dto.IService.csproj" />
     <ProjectReference Include="..\Dtol\Dtol.csproj" />
+    <ProjectReference Include="..\SystemFilter\SystemFilter.csproj" />
     <ProjectReference Include="..\ViewModel\ViewModel.csproj" />
   </ItemGroup>
 
