--- a/IntellVolunteer/appsettings.json
+++ b/IntellVolunteer/appsettings.json
@@ -17,10 +17,20 @@
     }
   },
 
+
+  //志愿者小程序对应信息
+  "WeChatToken": {
+    "grant_type": "client_credential",
+    "appid": "wx9948f9141aa016bf",
+    "secret": "119f73843585cdda94422c81277f34a1"
+  },
+
+
   "ConnectionStrings": {
     "SqlServerConnection": "Server=D41ICKRFDL1HRNM;Database=TedaVolunteerDB;Trusted_Connection=True;",
     //"SqlServerConnection": "Server=MSI\\SQLEXPRESS2014;Database=TedaVolunteerDB;Trusted_Connection=True;",
-    "WGWConnection": "Server=D41ICKRFDL1HRNM;Database=MicrocosmicWeb;uid=sa;pwd=App1234;"
+    "WGWConnection": "Server=D41ICKRFDL1HRNM;Database=MicrocosmicWeb;uid=sa;pwd=App1234;",
+    "EasyConnection": "Server=D41ICKRFDL1HRNM;Database=TedaEasyDB;uid=sa;pwd=App1234;"
   },
 
 
